[package]
name = "sleep-server"
version = "0.1.0"
authors = ["Anders Trier <anders.trier.olesen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rlimit = "0.3.0"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
